codepkg/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Application level</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Appropriate Dispute Resolution</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Lodgement</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accident_Location__c</fullName>
        <label>Location of Accident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_AccidentDate__c</fullName>
        <label>Accident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTP_ActionAndOutcome__c</fullName>
        <label>Action and Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Introduction Call</fullName>
                </value>
                <value>
                    <fullName>10 week Call</fullName>
                </value>
                <value>
                    <fullName>23 week Call</fullName>
                </value>
                <value>
                    <fullName>Claimant has been contacted</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Claimant does not want to be contacted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_ActionDueDate__c</fullName>
        <label>Action Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTP_CaseSubStatus__c</fullName>
        <description>This field provides information about the case sub status</description>
        <label>Case Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application received</fullName>
                </value>
                <value>
                    <fullName>Application verification</fullName>
                </value>
                <value>
                    <fullName>Screening</fullName>
                </value>
                <value>
                    <fullName>Awaiting Reply</fullName>
                </value>
                <value>
                    <fullName>Triage</fullName>
                </value>
                <value>
                    <fullName>Appropriate Dispute Resolution</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Account payable</fullName>
                </value>
                <value>
                    <fullName>Finalised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_CaseSubType__c</fullName>
        <description>This field provides information about the case sub type</description>
        <label>Case Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application received</fullName>
                </value>
                <value>
                    <fullName>Acceptance verification</fullName>
                </value>
                <value>
                    <fullName>Screening</fullName>
                </value>
                <value>
                    <fullName>Awaiting Reply</fullName>
                </value>
                <value>
                    <fullName>Triage</fullName>
                </value>
                <value>
                    <fullName>ADR</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Account payable</fullName>
                </value>
                <value>
                    <fullName>Finalise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_CaseType__c</fullName>
        <description>This field specifies the type of case.</description>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merit review</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Misc. Claims</fullName>
                </value>
                <value>
                    <fullName>DRS</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_ClaimNumber__c</fullName>
        <description>Holds claim number provided by insurer for a particular claim</description>
        <label>Claim Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_Date_of_accident__c</fullName>
        <description>Created as part of DCR-20 for new submitted application</description>
        <label>Date of accident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTP_Date_of_birth__c</fullName>
        <description>Created as part of DCR-20 for new submitted application</description>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTP_Date_rejected__c</fullName>
        <label>Date rejected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTP_DaysSinceReceived__c</fullName>
        <description>Calculated the number of days since the application has been received</description>
        <formula>TODAY()- DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTP_DisputeCategories__c</fullName>
        <label>Dispute Categories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merit review</fullName>
                </value>
                <value>
                    <fullName>Medical assessment</fullName>
                </value>
                <value>
                    <fullName>Claims assessment</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                    <isActive>false</isActive>
                    <label>CAS</label>
                </value>
                <value>
                    <fullName>Disputes</fullName>
                    <isActive>false</isActive>
                    <label>Disputes</label>
                </value>
                <value>
                    <fullName>Medical review</fullName>
                    <isActive>false</isActive>
                    <label>Medical review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_DisputeTypes__c</fullName>
        <label>Dispute Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CTP_DisputeCategories__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly Payments</fullName>
                </value>
                <value>
                    <fullName>Funeral Expenses</fullName>
                </value>
                <value>
                    <fullName>Cessation re Pending Damages Claim</fullName>
                </value>
                <value>
                    <fullName>Retirement age termination</fullName>
                </value>
                <value>
                    <fullName>Suspension re medical evidence</fullName>
                </value>
                <value>
                    <fullName>Suspension re work fitness evidence</fullName>
                </value>
                <value>
                    <fullName>Suspension re rehabilitation</fullName>
                </value>
                <value>
                    <fullName>Insurer notice periods</fullName>
                </value>
                <value>
                    <fullName>Recoverable statutory benefits</fullName>
                </value>
                <value>
                    <fullName>Refund of weekly payments</fullName>
                </value>
                <value>
                    <fullName>Weekly benefits outside Australia</fullName>
                </value>
                <value>
                    <fullName>Variation of weeklies</fullName>
                </value>
                <value>
                    <fullName>Cost of treatment and care</fullName>
                </value>
                <value>
                    <fullName>Gratuitous service</fullName>
                </value>
                <value>
                    <fullName>Verification of expensesTreatment &amp; care within time</fullName>
                </value>
                <value>
                    <fullName>Treatment &amp; care authorised</fullName>
                </value>
                <value>
                    <fullName>Treatment &amp; care compensated</fullName>
                </value>
                <value>
                    <fullName>Treatment &amp; care amount payable</fullName>
                </value>
                <value>
                    <fullName>Treatment &amp; care limits</fullName>
                </value>
                <value>
                    <fullName>Treatment &amp; care outside Australia</fullName>
                </value>
                <value>
                    <fullName>Excluded treatment &amp; care</fullName>
                </value>
                <value>
                    <fullName>Benefits reduced re Death</fullName>
                </value>
                <value>
                    <fullName>No Benefits if WC payable</fullName>
                </value>
                <value>
                    <fullName>No Benefits if vehicle uninsured</fullName>
                </value>
                <value>
                    <fullName>Mental harm limits on benefits</fullName>
                </value>
                <value>
                    <fullName>Damages impacts on benefits</fullName>
                </value>
                <value>
                    <fullName>Return to work benefits</fullName>
                </value>
                <value>
                    <fullName>Overpayment of benefits</fullName>
                </value>
                <value>
                    <fullName>Good faith duties</fullName>
                </value>
                <value>
                    <fullName>Just &amp; expeditious duties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_DoNotContactReason__c</fullName>
        <label>Do Not Contact Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTP_DoNotContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DO NOT CONTACT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTP_DueDate__c</fullName>
        <description>Field created from list of fields from confluence. 5 days from Insurer Reply due date (date from Insurer has been sent a notification for Lodge a reply)</description>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTP_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CTP_EntitlementName__c</fullName>
        <label>Entitlement Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>26 week Entitlement</fullName>
                </value>
                <value>
                    <fullName>2 year Entitlement</fullName>
                </value>
                <value>
                    <fullName>Damages Entitlement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_Feedback_Sub_type__c</fullName>
        <description>Created as part of DCR-308 to store sub-type for Feedback type of Case</description>
        <label>Feedback Sub-type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CTP_Feedback_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Motor Accident Injury Claims</fullName>
                </value>
                <value>
                    <fullName>Making a Claims</fullName>
                </value>
                <value>
                    <fullName>Insurance Policies</fullName>
                </value>
                <value>
                    <fullName>The CTP Scheme</fullName>
                </value>
                <value>
                    <fullName>Green Slips</fullName>
                </value>
                <value>
                    <fullName>Claims Disputes</fullName>
                </value>
                <value>
                    <fullName>Our Contact Support Services</fullName>
                </value>
                <value>
                    <fullName>Our Dispute Resolution Services</fullName>
                </value>
                <value>
                    <fullName>CTP Green Slip</fullName>
                </value>
                <value>
                    <fullName>About my Insurer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_Feedback_Type__c</fullName>
        <description>Created as part of DCR-308.</description>
        <label>Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enquiry</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_InjuredPersonAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claimant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Claimant Account)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTP_InjuredPersonContact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Claimant Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Claimant Contact)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTP_InsurerInternalReviewDone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to specify if Insurer internal review has been completed by the Insurer</description>
        <label>Has the insurer done an internal review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTP_InsurerRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field has information about insurer representative. It has look up to contact</description>
        <label>Insurer Representative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTP_Insurer_name__c</fullName>
        <description>Created as part of DCR-20 for new submitted application</description>
        <label>Insurer name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_LegalFirmInsurer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DCR-283- Legal Firm of Insurer</description>
        <label>Legal Firm - Insurer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Legal Firm - Insurer)</relationshipLabel>
        <relationshipName>InsurerCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTP_LegalFirm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DCR-283</description>
        <label>Legal Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Legal Firm)</relationshipLabel>
        <relationshipName>LegalFirmAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTP_LegalRepresentativeInsurer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DCR-283</description>
        <label>Legal Representative-Insurer-</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Legal Representative-Insurer-)</relationshipLabel>
        <relationshipName>LegalRepresentativeInsurerCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTP_LegalRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DCR-283</description>
        <label>Legal Representative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Legal Representative)</relationshipLabel>
        <relationshipName>CaseRepresentative</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTP_Location_of_accident__c</fullName>
        <description>Created as part of DCR-20 for new submitted application</description>
        <label>Location of accident</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>CTP_LodgementDate__c</fullName>
        <label>Lodgement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTP_OtherRelationshipDescription__c</fullName>
        <label>Relationship Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_OwnerEqualsLoggedinUser__c</fullName>
        <description>Logged in user is Case owner</description>
        <formula>IF($User.Id=OwnerId,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Equals Loggedin User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTP_ReasonForRejection__c</fullName>
        <description>This field specifies the reason for rejection of an Application</description>
        <label>Reason for rejection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>CTP_ScreeningResult__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No claim lodged</fullName>
                </value>
                <value>
                    <fullName>No Internal Review Requested</fullName>
                </value>
                <value>
                    <fullName>No jurisdictionNo Jurisdiction - non NSW accident</fullName>
                    <label>No Jurisdiction - non NSW accident</label>
                </value>
                <value>
                    <fullName>Application out of time</fullName>
                </value>
                <value>
                    <fullName>Duplicate Application</fullName>
                </value>
                <value>
                    <fullName>Claimant under 18</fullName>
                    <label>Age&lt;18 with no legal rep</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_RejectionComments__c</fullName>
        <description>Rejection comments should be provided when Application is rejected and reason of rejection is set to others.</description>
        <label>Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTP_RepresentativeAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Representative Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Representative Account)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTP_RepresentativeContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Representative Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Representative Contact)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTP_RepresentativeRelationship__c</fullName>
        <label>Relationship to Representative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_Response_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of DCr-308 to store the preference for  response required for Feedback case</description>
        <label>Response Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTP_ReviewCompletionDate__c</fullName>
        <description>Created as part of DCR-236, User provides the date when insurer internal review was done, populated from claimant portal.</description>
        <label>Insurer internal review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTP_ReviewReceiptDate__c</fullName>
        <description>Created as part of DCR-236, User provides the date of receipt of insurer internal review, populated from claimant portal.</description>
        <label>Insurer internal review receipt date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTP_SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_ScreeningResult__c</fullName>
        <description>This field provides information regarding screening result by DRS.</description>
        <label>Screening result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_Time_When_Application_Lodged__c</fullName>
        <label>Time When Application Lodged</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_TriageOutcome__c</fullName>
        <description>Field to hold the outcome of triage  done by DRO.</description>
        <label>TriageOutcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>More triage</fullName>
                </value>
                <value>
                    <fullName>ADR</fullName>
                </value>
                <value>
                    <fullName>Allocate</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Non - jurisdictional</fullName>
                </value>
                <value>
                    <fullName>Further info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTP_VisualIndicatior__c</fullName>
        <description>Indicates if a case is successfully screened or not based on the screening result field</description>
        <formula>IF( TEXT(CTP_ScreeningResult__c)==&apos;Accepted&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150k000000DdPt&quot;,&quot;Green&quot;,20,20), IF( TEXT(CTP_ScreeningResult__c)==&apos;Rejected&apos;,IMAGE(&quot;/servlet/servlet.FileDownload?file=0150k000000DdPy&quot;,&quot;Red&quot;,20,20),null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Screening result indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_outline_what_it_is_that_you_dont_agr__c</fullName>
        <description>Reasons for claimant&apos;s application for dispute and disagreements with the insurer&apos;s internal review decision.
Created as part of DCR-20.</description>
        <inlineHelpText>Outline what it is that you don&apos;t agree with in the Insurer&apos;s Decision and how you think it should be different</inlineHelpText>
        <label>How do you disagree with the insurer?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claimant_Name__c</fullName>
        <description>Name of claimant for whom the application has been submitted. This is derived from UCD.</description>
        <label>Claimant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>CTP_Application</fullName>
        <active>true</active>
        <businessProcess>Application level</businessProcess>
        <description>The means by which a party refers a merit review matter, medical assessment matter, misc claims assessment matter and claims assessment matter.</description>
        <label>Application</label>
    </recordTypes>
    <validationRules>
        <fullName>CTP_Reason_for_Rejection_Mandatory</fullName>
        <active>true</active>
        <description>If the screening result is mandatory user must provide reason</description>
        <errorConditionFormula>TEXT( CTP_ScreeningResult__c)=&apos;Rejected&apos; &amp;&amp; ISBLANK(CTP_ReasonForRejection__c)</errorConditionFormula>
        <errorDisplayField>CTP_ReasonForRejection__c</errorDisplayField>
        <errorMessage>Please select reason for rejection</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CTP_Rejection_comments_mandatory</fullName>
        <active>true</active>
        <description>Rejection comments should be provided if Screening result is &quot;Rejected&quot; and Reason of rejection is &quot;Other&quot;-Created as part of DCR-399</description>
        <errorConditionFormula>AND(
IF( TEXT( CTP_ScreeningResult__c) ==&apos;Rejected&apos;,true,false),
IF(INCLUDES(  CTP_ReasonForRejection__c,&apos;Other&apos;),true,false),
 If(CTP_RejectionComments__c ==NULL,true,false))</errorConditionFormula>
        <errorDisplayField>CTP_RejectionComments__c</errorDisplayField>
        <errorMessage>Please fill in the reason for rejection</errorMessage>
    </validationRules>
</CustomObject>